# Rust-api

./: Cargo.toml  readme.md
src/: main.rs
src/config/: server_config.rs
src/db/: db_conection.rs  mod.rs
src/handlers/: message_handler.rs  mod.rs  user_handler.rs
src/models/: message_model.rs  mod.rs  user_model.rs
src/routes/: auth_route.rs  index_route.rs  message_route.rs  mod.rs  user_route.rs
src/services/: message_service.rs  mod.rs  user_service.rs
src/tools/: encription.rs  gen_keys.rs  mod.rs
