[package]
name = "simple_api_with_actix_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
uuid = { version = "0.7", features = ["v4", "serde"] }